--- a/index.html
+++ b/index.html
@@ -1,12 +1,9 @@
- <!-- DannTeam || Spotify -->
-<!-- www.spotify.dannteam.com -->
-
-<!DOCTYPE html>
-<html lang="en">
+ <!DOCTYPE html>
+<html lang="id">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Spotify - DannTeam</title>
+  <title>Spotify - balxzzy</title>
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
   <style>
@@ -28,21 +25,40 @@
     .input-effect:focus {
       transform: scale(1.05);
     }
+    .modal-enter {
+      opacity: 0;
+      transform: scale(0.9);
+    }
+    .modal-enter-active {
+      opacity: 1;
+      transform: scale(1);
+      transition: opacity 300ms, transform 300ms;
+    }
+    .modal-leave {
+      opacity: 1;
+      transform: scale(1);
+    }
+    .modal-leave-active {
+      opacity: 0;
+      transform: scale(0.9);
+      transition: opacity 300ms, transform 300ms;
+    }
   </style>
   <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </head>
 <body class="bg-gray-200">
-  <!-- Captcha Modal -->
-  <div id="captchaModal" class="fixed top-0 left-0 w-full h-full bg-gray-800 bg-opacity-50 flex items-center justify-center">
-    <div class="bg-white p-8 rounded-lg relative w-full max-w-sm dark:bg-gray-700">
-      <h3 class="text-lg font-bold mb-4">Captcha Verification</h3>
+
+  <!-- Captcha Model -->
+  <div id="captchaModal" class="fixed top-0 left-0 w-full h-full bg-gray-800 bg-opacity-50 flex items-center justify-center modal-enter modal-leave">
+    <div class="bg-white p-8 rounded-lg relative w-full max-w-sm dark:bg-gray-700 transition-transform transform scale-100">
+      <h5 class="text-lg font-bold mb-4">Verivikasi Captcha Terlebih Dahulu</h5>
       <div class="flex items-center justify-center mb-4">
         <canvas id="captchaCanvas" width="200" height="50" class="border"></canvas>
-        <button onclick="generateCaptcha()" class="ml-4 text-blue-500 hover:underline">Refresh</button>
+        <button onclick="generateCaptcha()" class="ml-4 text-blue-500 hover:underline transition duration-300 transform hover:scale-105">Refresh</button>
       </div>
       <input type="text" id="captchaInput" placeholder="Masukkan Captcha" class="w-full border border-gray-300 px-4 py-2 rounded-md focus:outline-none focus:ring focus:border-blue-300 dark:bg-gray-700 dark:text-white input-effect mb-4">
-      <button onclick="validateCaptcha()" class="w-full bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600 focus:outline-none focus:ring focus:border-blue-300">Submit</button>
+      <button onclick="validateCaptcha()" class="w-full bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600 focus:outline-none focus:ring focus:border-blue-300 transition duration-300 transform hover:scale-105">Verivikasi</button>
     </div>
   </div>
 
@@ -55,17 +71,17 @@
             Spotify
           </h1>
           <div class="flex items-center space-x-4">
-            <button id="themeToggle" class="text-2xl focus:outline-none">
+            <button id="themeToggle" class="text-2xl focus:outline-none transition duration-300 transform hover:scale-110">
               <i id="themeIcon" class="fas fa-moon"></i>
             </button>
-            <button id="chatToggle" class="text-2xl focus:outline-none">
+            <button id="chatToggle" class="text-2xl focus:outline-none transition duration-300 transform hover:scale-110">
               <i class="fas fa-comments"></i>
             </button>
           </div>
         </div>
         <div class="relative grid grid-cols-12 gap-4 mx-auto max-w-md">
           <input type="text" id="searchInput" placeholder="Search..." class="col-span-9 border border-gray-300 px-4 py-2 rounded-l-md focus:outline-none focus:ring focus:border-blue-300 dark:bg-gray-700 dark:text-white input-effect">
-          <button onclick="search()" class="col-span-3 bg-blue-500 text-white px-4 py-2 rounded-r-md hover:bg-blue-600 focus:outline-none focus:ring focus:border-blue-300"><i class="fas fa-search"></i></button>
+          <button onclick="search()" class="col-span-3 bg-blue-500 text-white px-4 py-2 rounded-r-md hover:bg-blue-600 focus:outline-none focus:ring focus:border-blue-300 transition duration-300 transform hover:scale-105"><i class="fas fa-search"></i></button>
         </div>
         <div id="loader" class="hidden flex items-center justify-center mt-5">
           <div class="animate-spin rounded-full h-10 w-10 border-t-2 border-b-2 border-blue-500"></div>
@@ -78,18 +94,18 @@
     </div>
 
     <!-- Preview Modal -->
-    <div id="previewModal" class="fixed top-0 left-0 w-full h-full bg-gray-800 bg-opacity-50 hidden">
+    <div id="previewModal" class="fixed top-0 left-0 w-full h-full bg-gray-800 bg-opacity-50 hidden modal-enter modal-leave">
       <div class="container mx-auto h-full flex items-center justify-center">
-        <div class="bg-white p-8 rounded-lg relative w-full max-w-lg dark:bg-gray-700">
+        <div class="bg-white p-8 rounded-lg relative w-full max-w-lg dark:bg-gray-700 transition-transform transform scale-100">
           <img id="previewThumbnail" src="" alt="Thumbnail" class="w-32 h-32 mb-4">
           <h3 id="previewTitle" class="text-lg font-bold mb-2"></h3>
           <p id="previewArtist" class="text-gray-700 mb-2"></p>
           <p id="previewAlbum" class="text-gray-700 mb-4"></p>
           <div id="previewAudioContainer"></div>
-          <a id="previewDownload" href="" download class="bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600 focus:outline-none focus:ring focus:border-blue-300 mr-2">
+          <a id="previewDownload" href="" download class="bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600 focus:outline-none focus:ring focus:border-blue-300 mr-2 transition duration-300 transform hover:scale-105">
             <i class="fas fa-download"></i>
           </a>
-          <button onclick="saveToFavorites()" class="bg-green-500 text-white px-4 py-2 rounded hover:bg-green-600 focus:outline-none focus:ring focus:border-blue-300">
+          <button onclick="saveToFavorites()" class="bg-green-500 text-white px-4 py-2 rounded hover:bg-green-600 focus:outline-none focus:ring focus:border-blue-300 transition duration-300 transform hover:scale-105">
             <i class="fas fa-save"></i>
           </button>
           <button onclick="closePreview()" class="absolute top-0 right-0 mt-4 mr-4 text-gray-700 px-2 py-2 rounded-full focus:outline-none focus:ring focus:border-blue-300">
@@ -100,16 +116,16 @@
     </div>
 
     <!-- Chat Modal -->
-    <div id="chatModal" class="fixed top-0 left-0 w-full h-full bg-gray-800 bg-opacity-50 hidden">
+    <div id="chatModal" class="fixed top-0 left-0 w-full h-full bg-gray-800 bg-opacity-50 hidden modal-enter modal-leave">
       <div class="container mx-auto h-full flex items-center justify-center">
-        <div class="bg-white p-8 rounded-lg relative w-full max-w-lg dark:bg-gray-700">
+        <div class="bg-white p-8 rounded-lg relative w-full max-w-lg dark:bg-gray-700 transition-transform transform scale-100">
           <h3 class="text-lg font-bold mb-4">DannTeam AI - Chat</h3>
           <div id="chatContainer" class="mb-4 max-h-96 overflow-y-auto">
           </div>
           <div class="flex items-center space-x-2">
             <input type="text" id="chatInput" placeholder="Ketik..." class="flex-1 border border-gray-300 px-4 py-2 rounded-md focus:outline-none focus:ring focus:border-blue-300 dark:bg-gray-700 dark:text-white input-effect">
-            <button id="sendButton" class="bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600 focus:outline-none focus:ring focus:border-blue-300"><i class="fas fa-paper-plane"></i></button>
-            <button id="clearButton" class="bg-red-500 text-white px-4 py-2 rounded hover:bg-red-600 focus:outline-none focus:ring focus:border-red-300"><i class="fas fa-trash"></i></button>
+            <button id="sendButton" class="bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600 focus:outline-none focus:ring focus:border-blue-300 transition duration-300 transform hover:scale-105"><i class="fas fa-paper-plane"></i></button>
+            <button id="clearButton" class="bg-red-500 text-white px-4 py-2 rounded hover:bg-red-600 focus:outline-none focus:ring focus:border-red-300 transition duration-300 transform hover:scale-105"><i class="fas fa-trash"></i></button>
           </div>
           <button onclick="closeChat()" class="absolute top-0 right-0 mt-4 mr-4 text-gray-700 px-2 py-2 rounded-full focus:outline-none focus:ring focus:border-blue-300">
             <i class="fas fa-times"></i>
@@ -143,7 +159,7 @@
           document.getElementById('captchaModal').classList.add('hidden');
           document.getElementById('container').classList.remove('hidden');
         } else {
-          alert('Captcha tidak sesuai. Silakan coba lagi.');
+          alert('invalid');
           generateCaptcha();
         }
       }
@@ -167,41 +183,23 @@
       document.getElementById('sendButton').addEventListener('click', sendMessage);
       document.getElementById('clearButton').addEventListener('click', clearChat);
 
-      function sendMessage() {
+      async function sendMessage() {
         const chatInput = document.getElementById('chatInput').value;
         if (!chatInput) return;
 
         addChatMessage(chatInput, 'user');
 
-        axios.post(`https://chatgpt4online.org/wp-json/mwai-ui/v1/chats/submit`, {
-          payload: {
-            botId: "chatbot-qm966k",
-    customId: null,
-    session: "N/A",
-    chatId: "67uzmr9e1sv",
-    contextId: 5410,
-    messages: [
-      {
-        id: "6myn3fhk0vk",
-        role: "assistant",
-        content: "Hi! How can I help you?",
-        who: "AI: ",
-        timestamp: 1715992993960,
-      },
-    ],
-    newMessage: prompt,
-    newFileId: null,
-    stream: false,
-          },
-          headers: {
-            'Content-Type': 'application/json',
-            "X-WP-Nonce": "56bef00553",
-          }
-        })
-        .then(response => {
-          addChatMessage(response.data.reply, 'bot');
-        })
-        .catch(error => console.error(error));
+        try {
+          const response = await axios.post('https://luminai.my.id/chat', {
+            content: chatInput,
+            user: getCookie('username')
+          });
+
+          addChatMessage(response.data.result, 'bot');
+        } catch (error) {
+          console.error('Error:', error);
+          addChatMessage('Terjadi kesalahan, coba lagi.', 'bot');
+        }
 
         document.getElementById('chatInput').value = '';
       }
@@ -269,7 +267,7 @@
 
             const previewBtn = document.createElement('button');
             previewBtn.innerHTML = '<i class="fas fa-play"></i> Preview';
-            previewBtn.classList.add('bg-blue-500', 'text-white', 'px-4', 'py-2', 'rounded', 'hover:bg-blue-600', 'focus:outline-none', 'focus:ring', 'focus:border-blue-300', 'mr-4');
+            previewBtn.classList.add('bg-blue-500', 'text-white', 'px-4', 'py-2', 'rounded', 'hover:bg-blue-600', 'focus:outline-none', 'focus:ring', 'focus:border-blue-300', 'mr-4', 'transition', 'duration-300', 'transform', 'hover:scale-105');
             previewBtn.onclick = function() {
               openPreview(song);
             };
@@ -355,7 +353,7 @@
 
           const playBtn = document.createElement('button');
           playBtn.innerHTML = '<i class="fas fa-play"></i>';
-          playBtn.classList.add('bg-green-500', 'text-white', 'px-4', 'py-2', 'rounded', 'hover:bg-green-600', 'focus:outline-none', 'focus:ring', 'focus:border-green-300', 'mr-2');
+          playBtn.classList.add('bg-green-500', 'text-white', 'px-4', 'py-2', 'rounded', 'hover:bg-green-600', 'focus:outline-none', 'focus:ring', 'focus:border-green-300', 'mr-2', 'transition', 'duration-300', 'transform', 'hover:scale-105');
           playBtn.onclick = function() {
             openPreview(song);
           };
@@ -363,7 +361,7 @@
 
           const removeBtn = document.createElement('button');
           removeBtn.innerHTML = '<i class="fas fa-trash"></i>';
-          removeBtn.classList.add('bg-red-500', 'text-white', 'px-4', 'py-2', 'rounded', 'hover:bg-red-600', 'focus:outline-none', 'focus:ring', 'focus:border-red-300');
+          removeBtn.classList.add('bg-red-500', 'text-white', 'px-4', 'py-2', 'rounded', 'hover:bg-red-600', 'focus:outline-none', 'focus:ring', 'focus:border-red-300', 'transition', 'duration-300', 'transform', 'hover:scale-105');
           removeBtn.onclick = function() {
             removeFromFavorites(start + index);
           };
@@ -415,6 +413,27 @@
       }
 
       displayFavorites();
+
+      function getCookie(name) {
+        const value = `; ${document.cookie}`;
+        const parts = value.split(`; ${name}=`);
+        if (parts.length === 2) return parts.pop().split(';').shift();
+        return null;
+      }
+
+      function getRandomText() {
+        return 'user-' + Math.floor(Math.random() * 100000);
+      }
+
+      function setRandomTextCookie(randomText) {
+        document.cookie = `username=${randomText}; path=/`;
+      }
+
+      window.onload = function () {
+        if (!getCookie('username')) {
+          setRandomTextCookie(getRandomText());
+        }
+      }
     </script>
   </div>
 </body>
